--- a/QuanLyTour/Views/Admin/ThemKhachSanView.cshtml
+++ b/QuanLyTour/Views/Admin/ThemKhachSanView.cshtml
@@ -30,7 +30,7 @@
                                 <input type="text" class="form-control" id="diaDiem" placeholder="Địa Điểm" name="diaDiem" required>
                             </div>
                             <div class="form-group">
-                                <label for="donGia">Giá KhachSan</label>
+                                <label for="donGia">Giá Khách Sạn</label>
                                 <input type="text" class="form-control" id="donGia" placeholder="Giá Khách Sạn" name="giaKhachSan" required>
                             </div>
                             <div class="form-group">
@@ -67,7 +67,8 @@
                                 <textarea class="form-control" name="lichTrinh" rows="10" placeholder="Nhập lịch trình cho khách sạn..."></textarea>
                             </div>
                             <div class="modal-footer">
-                                <a href="@Url.Action("QuanLyKhachSanView","Admin")"> <button type="button" class="btn btn-secondary">Hủy</button></a>
+                                <a href="@Url.Action("QuanLyKhachSanView","Admin")"> 
+                                <button type="button" class="btn btn-secondary">Hủy</button></a>
                                 <button type="submit" class="btn btn-primary">Thêm</button>
                             </div>
                         </form>
