add index and danh muc khach san

--- a/QuanLyTour/Views/KhachSan/ChiTietKhachSan.cshtml
+++ b/QuanLyTour/Views/KhachSan/ChiTietKhachSan.cshtml
@@ -1,4 +1,4 @@
-﻿@using X.PagedList.Mvc.Core
+﻿@* @using X.PagedList.Mvc.Core
 @model QuanLyTour.Models.DetailViewModel
 @{
     ViewData["Title"] = "Thông tin khách sạn";
@@ -210,3 +210,4 @@
         </div><!-- end container -->
     </div><!-- end hotel-details -->
 </section><!-- end innerpage-wrapper -->
+ *@
