--- a/QuanLyTour/Views/KhachSan/Index.cshtml
+++ b/QuanLyTour/Views/KhachSan/Index.cshtml
@@ -18,7 +18,7 @@
 
                     <div class="search-form-container" style="margin-top:20px">
                         <div class="row">
-                            <form id="search-form" action="@Url.Action("TimKiemKhachSan", "Home")" method="get">
+                            <form id="search-form" action="@Url.Action("TimKiemKhach", "Home")" method="get">
                                 <!-- Ô nhập địa điểm -->
                                 <div class="col-xs-12 col-md-4" style="padding-right: 5px; margin-bottom: 10px;">
                                     <div class="input-group">
@@ -110,7 +110,7 @@
                 }
                 else
                 {
-                    <p class="text-center danger">Không có tour mới nào để hiển thị.</p>
+                    <p class="text-center danger">Không có khach san mới nào để hiển thị.</p>
                 }
 
                 <div class="view-all text-center">
