add tim kiem ks

--- a/QuanLyTour/Views/KhachSan/Index.cshtml
+++ b/QuanLyTour/Views/KhachSan/Index.cshtml
@@ -18,7 +18,7 @@
 
                     <div class="search-form-container" style="margin-top:20px">
                         <div class="row">
-                            <form id="search-form" action="@Url.Action("TimKiemKhach", "Home")" method="get">
+                            <form id="search-form" action="@Url.Action("TimKiemKhachSan", "KhachSan")" method="get">
                                 <!-- Ô nhập địa điểm -->
                                 <div class="col-xs-12 col-md-4" style="padding-right: 5px; margin-bottom: 10px;">
                                     <div class="input-group">
