--- a/QuanLyTour/Views/KhachSan/ChiTietKhachSan.cshtml
+++ b/QuanLyTour/Views/KhachSan/ChiTietKhachSan.cshtml
@@ -1,4 +1,4 @@
-﻿@using X.PagedList.Mvc.Core
+﻿@* @using X.PagedList.Mvc.Core
 @model QuanLyTour.Models.DetailViewModel
 @{
     ViewData["Title"] = "Thông tin khách sạn";
@@ -38,13 +38,7 @@
                                         @Html.TextBox("DiaChi", (string)ViewBag.DiaChi,
                                                  new { @class = "form-control", placeholder = "Địa chỉ", required = "required" })
                                     </div>
-                                    <div class="form-group">
-                                        <label for="SoLuong">Số lượng:</label>
-                                        <input type="number" name="SoLuong" id="SoLuong" class="form-control" min="1" value="1" />
-                                    </div>
-                                    <div class="form-group">
-                                        @Html.TextBox("NgayDi", null, new { @class = "form-control dpd1", placeholder = "Chọn ngày", required = "required" })<i class="fa fa-calendar"></i>
-                                    </div>
+                                   
                                     <div class="form-group">
                                         <label for="TongTien">Tổng tiền:</label>
                                         <input type="text" id="TongTien" class="form-control" readonly placeholder="Tổng tiền sẽ hiển thị ở đây" />
@@ -61,17 +55,7 @@
                                         <input type="text" name="ChuThe" id="ChuThe" class="form-control" placeholder="Nhập tên chủ thẻ" required />
                                     </div>
 
-                                    <script>
-                                        var gia = @Model.KhachSanHienTai.GiaKhachSan;
-
-                                        function tinhTongTien() {
-                                            var soLuong = document.getElementById("SoLuong").value || 1;
-                                            document.getElementById("TongTien").value = (gia * soLuong).toLocaleString('vi-VN') + " VND";
-                                        }
-
-                                        document.addEventListener("DOMContentLoaded", tinhTongTien);
-                                        document.getElementById("SoLuong").addEventListener("input", tinhTongTien);
-                                    </script>
+                                   
 
                                     <div class="form-group right-icon">
                                         <select class="form-control">
@@ -201,3 +185,4 @@
         </div><!-- end container -->
     </div><!-- end hotel-details -->
 </section><!-- end innerpage-wrapper -->
+ *@
