--- a/QuanLyTour/Views/KhachSan/ChiTietKhachSan.cshtml
+++ b/QuanLyTour/Views/KhachSan/ChiTietKhachSan.cshtml
@@ -1,4 +1,4 @@
-﻿@* @using X.PagedList.Mvc.Core
+﻿@using X.PagedList.Mvc.Core
 @model QuanLyTour.Models.DetailViewModel
 @{
     ViewData["Title"] = "Thông tin khách sạn";
@@ -95,27 +95,7 @@
                             }
                         }
                     </div><!-- end side-bar-block -->
-                    <div class="row">
-                        <div class="col-xs-12 col-sm-6 col-md-12">
-                            <div class="side-bar-block main-block ad-block">
-                                <div class="main-img ad-img">
-                                    <a href="#">
-                                        <img src="~/images/car-ad.jpg" class="img-responsive" alt="car-ad" />
-                                        <div class="ad-mask">
-                                            <div class="ad-text">
-                                                <span>Chất lượng</span>
-                                                <h2>Giá Khách Sạn</h2>
-                                                <span>Tốt nhất </span>
-                                            </div><!-- end ad-text -->
-                                        </div><!-- end columns -->
-                                    </a>
-                                </div><!-- end ad-img -->
-                            </div><!-- end side-bar-block -->
-                        </div><!-- end columns -->
-
-
-
-                    </div><!-- end row -->
+                  
                 </div><!-- end columns -->
 
                 <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 content-side">
@@ -201,4 +181,3 @@
         </div><!-- end container -->
     </div><!-- end hotel-details -->
 </section><!-- end innerpage-wrapper -->
- *@
